--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @product_categories.all.each do |pc| %>
+    <% @product_categories.order(:name).each do |pc| %>
     <tr>
       <td><%= pc.name %> (<%= pluralize pc.product_families.count, 'product family' %>)</td><td><%= link_to 'edit', edit_product_category_path(pc), class: 'small yellow button radius' %> <%= link_to 'delete', product_category_path(pc), method: :delete, data: {confirm: 'Are you sure?'}, class: 'small red button nice radius' %></td>
     </tr>
