--- a/app/views/color_palettes/index.html.erb
+++ b/app/views/color_palettes/index.html.erb
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="large-12 columns">
           <%= link_to "Add New Color", new_color_path(id: color_palette.id), class: 'success small button nice radius' %>
-          <%= link_to "Delete Color Palette", color_palette_path(color_palette), method: :delete, class: 'red small button nice radius right', data: {confirm: "Are you sure?"} %>
+          <%= link_to "Delete Color Palette", color_palette_path(color_palette), method: :delete, class: 'red small button nice radius right', data: {confirm: "1"} %>
           <%= link_to "Edit Color Palette", edit_color_palette_path(color_palette), class: 'small yellow button nice radius right right-space' %>
         </div>        
         <hr />
