--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @products.each do |p| %>
     <tr class="product-row">
-      <td><%= p.product_family.name %></td><td><%= p.sku %></td><td><%= link_to 'edit', edit_product_path(p), class: 'small yellow button radius' %> <%= link_to 'delete', product_path(p), method: :delete, data: {confirm: 'Are you sure?'}, class: 'small red button nice radius' %></td><td><a class="product-details-link right" href="javascript:void(0)">[+]</a></td>
+      <td><%= p.product_family.name %></td><td><%= p.sku %></td><td><%= link_to 'edit', edit_product_path(p), class: 'small yellow button radius' %> <%= link_to 'delete', product_path(p), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td><td><a class="product-details-link right" href="javascript:void(0)">[+]</a></td>
     </tr>
     <tr class='hide product-details'>
       <td colspan='4'>
