--- a/app/views/wallbase_collections/index.html.erb
+++ b/app/views/wallbase_collections/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @collections.each do |c| %>
     <tr>
-      <td><%= link_to c.name, wallbase_collection_path(c) %></td><td><%= link_to 'edit', edit_wallbase_collection_path(c), class: 'small yellow button radius' %> <%= link_to 'delete', wallbase_collection_path(c), method: :delete, data: {confirm: 'Are you sure?'}, class: 'small red button nice radius' %></td>
+      <td><%= link_to c.name, wallbase_collection_path(c) %></td><td><%= link_to 'edit', edit_wallbase_collection_path(c), class: 'small yellow button radius' %> <%= link_to 'delete', wallbase_collection_path(c), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
     </tr>
     <% end %>
   </tbody>
