--- a/app/views/color_families/index.html.erb
+++ b/app/views/color_families/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @color_families.all.each do |pc| %>
     <tr>
-      <td><%= pc.name %></td><td><%= link_to 'edit', edit_color_family_path(pc), class: 'small yellow button radius' %> <%= link_to 'delete', color_family_path(pc), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
+      <td><%= pc.name %></td><td><%= link_to 'Edit', edit_color_family_path(pc), class: 'small yellow button radius' %> <%= link_to 'Delete', color_family_path(pc), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
     </tr>
     <% end %>
   </tbody>
