--- a/app/views/product_warranties/index.html.erb
+++ b/app/views/product_warranties/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @product_warranties.all.each do |pc| %>
     <tr>
-      <td><%= pc.name %></td><td><%= link_to 'edit', edit_product_warranty_path(pc), class: 'small yellow button radius' %> <%= link_to 'delete', product_warranty_path(pc), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
+      <td><%= pc.name %></td><td><%= link_to 'Edit', edit_product_warranty_path(pc), class: 'small yellow button radius' %> <%= link_to 'Delete', product_warranty_path(pc), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
     </tr>
     <% end %>
   </tbody>
