--- a/app/views/textures/index.html.erb
+++ b/app/views/textures/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @textures.all.each do |pc| %>
     <tr>
-      <td><%= pc.name %></td><td><%= link_to 'edit', edit_texture_path(pc), class: 'small yellow button radius' %> <%= link_to 'delete', texture_path(pc), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
+      <td><%= pc.name %></td><td><%= link_to 'Edit', edit_texture_path(pc), class: 'small yellow button radius' %> <%= link_to 'Delete', texture_path(pc), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
     </tr>
     <% end %>
   </tbody>
