--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -135,6 +135,21 @@ body {
     }
   }
   &.full-width {width: 100%;}
+  &.green {
+    $colorA: #47a447; 
+    $colorB: darken($colorA,7%); 
+    color: #FFF !important;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.7);
+    font-family: 'Roboto Slab', Arial, Helvetica, sans-serif;
+    border: 1px solid darken($colorB,10%) !important;
+    @include background-gradient($colorA, $colorB);
+    
+    &.nice {border: 1px solid darken($colorB,10%);}
+    &:hover, &:focus {
+      @include background-gradient(darken($colorA, 7%), darken($colorB,7%));
+    }
+  }
+  &.full-width {width: 100%;}
 }
 .centered {text-align: center;}
 #footer {font-size: 12px;margin-bottom: 20px;}
