--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,10 +79,10 @@
       <h5>Main</h5>
       <div class="section-container vertical-nav" data-section="vertical-nav" data-options="one_up: false;">
         <section>
-          <p id="firstStop" class="title <%= is_current?('welcome') %>" data-section-title><%= link_to 'Home', root_path %></p>        
+          <p id="firstStop" class="title <%= is_current?('welcome') %>" data-section-title><%= link_to_icon 'home', 'Home', root_path %></p>        
         </section>
         <section>
-          <p class="title <%= is_current?('users') %>" data-section-title><%= link_to 'Users', users_path %></p>
+          <p class="title <%= is_current?('users') %>" data-section-title><%= link_to_icon 'user', 'Users', users_path %></p>
         </section>
       </div>
       <h5>Products</h5>
