--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -2,7 +2,7 @@
 
 <hr />
 
-<%= link_to 'New Product Category', new_product_category_path, class: 'blue button nice radius' %>
+<%= link_to_icon 'plus-sign icon-white', 'New Product Category', new_product_category_path, class: 'small green button radius' %>
 
 <table>
   <thead>
@@ -13,7 +13,7 @@
   <tbody>
     <% @product_categories.order(:name).each do |pc| %>
     <tr>
-      <td><%= pc.name %> (<%= pluralize pc.product_families.count, 'product family' %>)</td><td><%= link_to 'Edit', edit_product_category_path(pc), class: 'small yellow button radius ' %> <%= link_to 'Delete', product_category_path(pc), method: :delete, data: {confirm: '1', verb: "Delete #{pc.name}", message: "This will delete ALL product families and products associated to #{pc.name}!"}, class: 'small red button nice radius ' %></td>
+      <td><%= pc.name %> (<%= pluralize pc.product_families.count, 'product family' %>)</td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_category_path(pc), class: 'small blue button radius ' %> <%= link_to_icon 'trash icon-white', 'Delete', product_category_path(pc), method: :delete, data: {confirm: '1', verb: "Delete #{pc.name}", message: "This will delete ALL product families and products associated to #{pc.name}!"}, class: 'small red button nice radius ' %></td>
     </tr>
     <% end %>
   </tbody>
