--- a/app/views/product_lengths/index.html.erb
+++ b/app/views/product_lengths/index.html.erb
@@ -2,7 +2,7 @@
 
 <hr />
 
-<%= link_to 'New Product Length', new_product_length_path, class: 'blue button nice radius' %>
+<%= link_to_icon 'plus-sign icon-white', 'New Product Length', new_product_length_path, class: 'small green button nice radius' %>
 
 <table>
   <thead>
@@ -13,7 +13,7 @@
   <tbody>
     <% @product_lengths.all.each do |pc| %>
     <tr>
-      <td><%= pc.name %></td><td><%= link_to 'Edit', edit_product_length_path(pc), class: 'small yellow button radius' %> <%= link_to 'Delete', product_length_path(pc), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
+      <td><%= pc.name %></td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_length_path(pc), class: 'small blue button radius' %> <%= link_to_icon 'trash icon-white', 'Delete', product_length_path(pc), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td>
     </tr>
     <% end %>
   </tbody>
