--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <h3 class="subheader">Products</h3>
 <hr />
 
-<%= link_to "New Product", new_product_path, class: 'nice button radius' %>
+<%= link_to_icon 'plus-sign icon-white', "New Product", new_product_path, class: 'small green button radius' %>
 
 <table>
   <thead>
@@ -12,7 +12,7 @@
   <tbody>
     <% @products.each do |p| %>
     <tr class="product-row">
-      <td><%= p.product_family.name %></td><td><%= p.sku %></td><td><%= link_to 'Edit', edit_product_path(p), class: 'small yellow button radius' %> <%= link_to 'Delete', product_path(p), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td><td><a class="product-details-link right" href="javascript:void(0)">[+]</a></td>
+      <td><%= p.product_family.name %></td><td><%= p.sku %></td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_path(p), class: 'small blue button radius' %> <%= link_to_icon 'trash icon-white', 'Delete', product_path(p), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td><td><a class="product-details-link" href="javascript:void(0)"><i class="icon icon-info-sign"></i></a></td>
     </tr>
     <tr class='hide product-details'>
       <td colspan='4'>
