--- a/app/views/wallbase_style_types/index.html.erb
+++ b/app/views/wallbase_style_types/index.html.erb
@@ -1,6 +1,6 @@
 <h3>Style Types</h3>
 <hr />
-<%= link_to "New Style Type", new_wallbase_style_type_path, class: 'button nice radius' %>
+<%= link_to_icon 'plus-sign icon-white', "New Style Type", new_wallbase_style_type_path, class: 'small green button nice radius' %>
 
 <table>
   <thead>
@@ -11,7 +11,7 @@
   <tbody>
     <% @style_types.each do |st| %>
     <tr>
-      <td><%= st.name %></td><td><%= link_to "Edit", edit_wallbase_style_type_path(st), class: 'small yellow button nice radius' %>  <%= link_to "Delete", wallbase_style_type_path(st), data: {confirm: "1"}, :method => :delete, class: 'small red button nice radius' %></td>
+      <td><%= st.name %></td><td><%= link_to_icon 'edit icon-white', "Edit", edit_wallbase_style_type_path(st), class: 'small blue button nice radius' %>  <%= link_to_icon 'trash icon-white', "Delete", wallbase_style_type_path(st), data: {confirm: "1"}, :method => :delete, class: 'small red button nice radius' %></td>
     </tr>
     <% end %>
   </tbody>
