Added color id to products.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -21,6 +21,7 @@
           <li>Width: <%= p.width %></li>
           <li>Thickness: <%= p.thickness %></li>
           <li>Warranty: <%= p.warranty %></li>
+          <li>Color: <%= p.color.name %></li>
         </ul>
       </td>
     </tr>
