Added turbo links and new form styles.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <nav class="top-bar">
     <section class="top-bar-section" id="menu">
         <ul class="left">
-          <li><a href="/" id="logo"><%= image_tag "logo.gif" %></a></li>
+          <li><a href="/" id="logo">Johnsonite</a></li>
         </ul>      
         <ul class="right hide-for-small">
         <% if user_signed_in? %>
