--- a/app/views/color_palettes/new.html.erb
+++ b/app/views/color_palettes/new.html.erb
@@ -1,4 +1,4 @@
-<h3>Create a Color Palette</h3>
+<h3 class="subheader">Create a Color Palette</h3>
 <hr />
 
 <%= form_for @color_palette do |f| %>
@@ -10,5 +10,6 @@
   <br />
   <%= f.text_field :name, placeholder: "Color Palette Name" %>
   
-  <%= f.submit "Create Color Palette", class: 'success button nice radius' %> <%= link_to "Cancel", color_palettes_path, class: 'red button nice radius' %>
+  <%= f.submit "Create Color Palette", class: 'small green button nice radius' %>
+  <%= link_to "Cancel", color_palettes_path, class: 'small red button nice radius' %>
 <% end %>
