--- a/app/views/patterns/new.html.erb
+++ b/app/views/patterns/new.html.erb
@@ -4,5 +4,6 @@
   
   <%= render partial: 'form', locals: {f: f} %>
   
-  <%= f.submit "Create", class: 'nice button radius' %>
+  <%= f.submit "Create Pattern", class: 'small green nice button radius' %>
+  <%= link_to "Cancel", patterns_path, class: 'small red button radius' %>
 <% end %>
