--- a/app/views/product_thicknesses/new.html.erb
+++ b/app/views/product_thicknesses/new.html.erb
@@ -4,5 +4,6 @@
   
   <%= render partial: 'form', locals: {f: f} %>
   
-  <%= f.submit "Create", class: 'nice button radius' %>
+  <%= f.submit "Create Product Thickness", class: 'small green nice button radius' %>
+  <%= link_to "Cancel", product_thicknesses_path, class: 'small red nice button radius' %>
 <% end %>
