--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -23,5 +23,6 @@
 
   <%= f.label :sku %>
   <%= f.text_field :sku %>
-  <%= f.submit "Create Product", class: 'nice button radius' %>
+  <%= f.submit "Create Product", class: 'small green nice button radius' %>
+  <%= link_to "Cancel", products_path, class: 'small red nice button radius' %>
 <% end %>
