--- a/app/views/wallbase_collections/new.html.erb
+++ b/app/views/wallbase_collections/new.html.erb
@@ -50,5 +50,6 @@
     </div>
   </div>
 
-  <%= f.submit "Create Collection", class: ' nice button radius' %> <%= link_to "Cancel", wallbase_collections_path, class: ' red button nice radius' %>
+  <%= f.submit "Create Collection", class: 'small green nice button radius' %>
+  <%= link_to "Cancel", wallbase_collections_path, class: 'small red button radius' %>
 <% end %>
