--- a/app/views/wallbase_style_types/new.html.erb
+++ b/app/views/wallbase_style_types/new.html.erb
@@ -1,12 +1,13 @@
 <h3>Create a style type</h3>
 <hr />
 
-<%= form_for @style_type, html: {class: 'custom'} do |f| %>
+<%= form_for @style_type do |f| %>
   <%= f.error_messages %>
   <%= f.label :wallbase_collection_id, "Wallbase Collection" %>
   <%= f.select :wallbase_collection_id, WallbaseCollection.order(:name).map {|c| [c.name, c.id]}, selected: params[:wallbase_collection_id] %>
   <%= f.label :name %>
   <%= f.text_field :name, placeholder: "Style Type Name" %>
   
-  <%= f.submit "Create style type", class: ' success button nice radius' %> <%= link_to "Cancel", wallbase_style_types_path, class: ' red button nice radius' %>
+  <%= f.submit "Create Style Type", class: 'small green button nice radius' %>
+  <%= link_to "Cancel", wallbase_style_types_path, class: 'small red button nice radius' %>
 <% end %>
