Fix in color palettes.

--- a/app/views/color_palettes/index.html.erb
+++ b/app/views/color_palettes/index.html.erb
@@ -9,7 +9,7 @@
 <% @color_palettes.each do |color_palette| %>  
   <section class="section">
     <div class="title hide">
-      <h5 style="text-align: center"><%= color_palette.name %></h5>
+      <%= color_palette.name %>
     </div>
     <div class="content">
       <h4 class="subheader">Palette <%= color_palette.name %></h4>
