--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,6 +3,26 @@
 
 <%= link_to_icon 'plus-sign icon-white', "New Product", new_product_path, class: 'small green button radius' %>
 
+<h4><%= @products.count %> Products</h4>
+
+<%= form_tag product_search_path, id: "productSearchForm" do %>    
+  <div class='row'>
+    <div class='twelve columns'>
+      <%= field_set_tag do %>
+        <%= select_tag :product_family_id, options_for_select(ProductFamily.all.map {|pl| [pl.name, pl.id]}, params[:product_family_id]), id: "product_family_select" %>        
+        <%= submit_tag 'search', class: "small blue button nice round" %> 
+        <%= link_to "advanced", '', :class => 'white round button nice radius small', :id => 'advancedSearch' %>        
+      <% end %>
+    </div>  
+  </div>
+<% end %>
+
+
+<div class="pagination-container right">
+  <%= will_paginate(@products, :previous_label => "«", :next_label => "»" ) %>
+</div>
+<br />
+
 <table>
   <thead>
     <tr>
@@ -12,7 +32,7 @@
   <tbody>
     <% @products.each do |p| %>
     <tr class="product-row">
-      <td><%= p.product_family.name %></td><td><%= p.sku %></td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_path(p), class: 'small blue button radius' %> <%= link_to_icon 'trash icon-white', 'Delete', product_path(p), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td><td><a class="product-details-link" href="javascript:void(0)"><i class="icon icon-info-sign"></i></a></td>
+      <td><%= p.product_family.name if p.product_family %></td><td><%= p.sku %></td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_path(p), class: 'small blue button radius' %> <%= link_to_icon 'trash icon-white', 'Delete', product_path(p), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td><td><a class="product-details-link" href="javascript:void(0)"><i class="icon icon-info-sign"></i></a></td>
     </tr>
     <tr class='hide product-details'>
       <td colspan='4'>
@@ -21,7 +41,7 @@
           <li>Width: <%= p.width %></li>
           <li>Thickness: <%= p.thickness %></li>
           <li>Warranty: <%= p.warranty %></li>
-          <li>Color: <%= p.color.name %></li>
+          <li>Color: <%= p.color.name if p.color %></li>
         </ul>
       </td>
     </tr>
