--- a/app/views/product_families/index.html.erb
+++ b/app/views/product_families/index.html.erb
@@ -4,17 +4,21 @@
 
 <%= link_to_icon 'plus-sign icon-white', 'New Product Family', new_product_family_path, class: 'small green button radius' %>
 
+
 <table>
   <thead>
     <tr>
-      <th>Product Category</th><th>Name</th><th>Sample Code</th><th>Actions</th>
+      <th>Name</th><th>Sample Code</th><th>Actions</th>
     </tr>
   </thead>
   <tbody>
-    <% @product_families.order(:product_category_id, :name).each do |pc| %>
-    <tr>
-      <td><%= pc.product_category.name %></td><td><%= pc.name %></td><td><%= pc.sample_code %></td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_family_path(pc), class: 'small blue button radius full-width' %> <%= link_to_icon 'trash icon-white', 'Delete', product_family_path(pc), method: :delete, data: {confirm: '1', verb: "Delete #{pc.name}", message: "This will delete ALL products associated to #{pc.name}!"}, class: 'small red button nice radius full-width' %></td>
-    </tr>
+    <% @product_categories.each do |c| %>
+      <% c.product_families.order(:name).each do |pc| %>
+        <tr>
+          <td><%= pc.name %> - <%= pc.product_category.name %></td><td><%= pc.sample_code %></td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_family_path(pc), class: 'small blue button radius full-width' %> <%= link_to_icon 'trash icon-white', 'Delete', product_family_path(pc), method: :delete, data: {confirm: '1', verb: "Delete #{pc.name}", message: "This will delete ALL products associated to #{pc.name}!"}, class: 'small red button nice radius full-width' %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
+</div>
