Fixed product index searching.

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -321,3 +321,16 @@ select {
   tr.product-row {
     border-bottom: 1px solid #CCC;
   }
+
+/* .pagination-container */
+
+.pagination-container {
+  text-align: center;
+  /* .pagination */
+  .pagination {display: inline-block;}
+}
+
+/* #paginate_per_page */
+#paginate_per_page {
+  text-align: right; margin-bottom: 5px;
+}
