--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -23,6 +23,6 @@
 
   <%= f.label :sku %>
   <%= f.text_field :sku %>
-  <%= f.submit "Update Product", class: 'small green nice button radius' %>
+  <%= f.submit "Update Product", class: 'small blue nice button radius' %>
   <%= link_to "Cancel", products_path, class: 'small red nice button radius' %>
 <% end %>
