--- a/app/views/color_palettes/edit.html.erb
+++ b/app/views/color_palettes/edit.html.erb
@@ -10,5 +10,6 @@
   
   <%= f.text_field :name, placeholder: "Color Palette Name" %>
 
-  <%= f.submit "Update Color Palette", class: 'button nice radius' %> <%= link_to "Cancel", color_palettes_path, class: 'red button nice radius' %>
+  <%= f.submit "Update Color Palette", class: 'small blue button nice radius' %>
+  <%= link_to "Cancel", color_palettes_path, class: 'red small button nice radius' %>
 <% end %>
