Updated wallbase styles.

--- a/app/views/wallbase_collections/edit.html.erb
+++ b/app/views/wallbase_collections/edit.html.erb
@@ -49,5 +49,6 @@
     </div>
   </div>
 
-  <%= f.submit "Update Collection", class: 'nice button radius' %> <%= link_to "Cancel", wallbase_collections_path, class: 'red button nice radius' %>
+  <%= f.submit "Update Collection", class: 'small blue nice button radius' %>
+  <%= link_to "Cancel", wallbase_collections_path, class: 'red small button nice radius' %>
 <% end %>
