--- a/app/views/wallbase_style_types/edit.html.erb
+++ b/app/views/wallbase_style_types/edit.html.erb
@@ -7,5 +7,6 @@
   <%= f.label :name %>
   <%= f.text_field :name, placeholder: "Style Type Name" %>
 
-  <%= f.submit "Update style type", class: 'nice radius button' %> <%= link_to "Cancel", wallbase_style_types_path, class: 'nice radius red button' %>
+  <%= f.submit "Update style type", class: 'small blue nice radius button' %>
+  <%= link_to "Cancel", wallbase_style_types_path, class: 'small nice radius red button' %>
 <% end %>
