Added beta flag

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -335,3 +335,24 @@ select {
 #paginate_per_page {
   text-align: right; margin-bottom: 5px;
 }
+
+#beta-tag {
+  position: fixed;
+  z-index: 9999999999;
+  color: white;
+  padding: 28px;
+  font-weight: bold;
+  background-color: rgba(102, 153, 255,0.9);
+  box-shadow: 0 1px 14px #333;
+  -moz-box-shadow: 0 1px 14px #333;
+  -webkit-box-shadow: 0 1px 14px #333;
+  transform: rotate(-36deg);
+  -ms-transform: rotate(-36deg);
+  -webkit-transform: rotate(-36deg);
+  width: 300px;
+  text-align: center;
+  left: -89px;
+  font-size: 20px;
+  border: 1px solid #555;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.7);
+}
