--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <![endif]-->
 </head>
 <body>
+  <div id="beta-tag">BETA<br /><small>v 0.8.3</small></div>
   <nav class="top-bar">
     <section class="top-bar-section" id="menu">
         <ul class="left">
