Moved beta tag into helper.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <![endif]-->
 </head>
 <body>
-  <div id="beta-tag">BETA<br /><small>v <%= `git log --pretty=format:'%h' -n 1` %></small></div>
+  <%= beta_tag %>
   <nav class="top-bar">
     <section class="top-bar-section" id="menu">
         <ul class="left">
