--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -174,10 +174,10 @@ table {
 #side-nav {
   section {
     p {
-      @include background-gradient(#f9f9f9, #f2f2f2);
-      &.current-nav {text-shadow: 0 1px 1px rgba(0,0,0,0.7);@include background-gradient(#b2e1ff, #66b6fc);a{color:white;}}
+      @include background-gradient(rgba(255,255,255,1), rgba(255,255,255,0) );
+      &.current-nav {text-shadow: 0 1px 1px rgba(0,0,0,0.7);@include background-gradient(#003241, #003241);a{color:white;}}
       a:hover {
-        color: #43a5fb;
+        color: #CCC !important;
       }
       width: 100% !important;
     }  
