Updated homepage styles

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -356,3 +356,14 @@ select {
   border: 1px solid #555;
   text-shadow: 0 1px 1px rgba(0,0,0,0.7);
 }
+
+.info {
+  padding-left: 8px;
+  ul {
+    li {
+     margin-left: 30px;
+     }
+  }
+}
+
+.clear {clear:both}
