--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -146,7 +146,7 @@
   </div>
 
   <div class="row centered" id="footer">
-    Designed by Boondock in Cleveland Assembled in Ruby Model BW3635
+    Designed by Boondock in Cleveland
   </div> 
 </body>
 </html>
