--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,10 +3,10 @@
 <br />
 <br />
 <br />
-<h3 class="subheader centered">Welcome to the Johnsonite Product Manager</h3>
+<h3 class="centered">Welcome to the Johnsonite Product Manager</h3>
 <hr />
-<p class="centered hide-for-small" style="font-size: 26px;">
-  Use the navigation on the left to get started, or if you're new you can <a href='javascript:void(0)' id='joyride-start' style="color: #69F">take a tour</a>.
+<p class="subheader centered hide-for-small" style="font-size: 26px;">
+  Use the navigation on the left to get started, or if you're new you can <a href='javascript:void(0)' id='joyride-start' style="color: #003241">take a tour</a>.
   <br /><%= image_tag "get_started.png", style: 'width:64px; height: 68px;float: left;top: -47px;position: relative;', class: 'hide-for-small' %>
 </p>
 
