--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,6 +9,17 @@
       <%#= field_set_tag do %>
         <%= f.label :id, "Search by Product Family" %>
         <%= f.grouped_collection_select(:id, ProductCategory.order(:name), :product_families, :name, :id, :name) %>
+        
+        <% @select_constraints.each do |c| %>
+          <%= label_tag c %>
+          <%= select_tag c, options_for_select(c.gsub('_id', '').split('_').map(&:capitalize!).join.constantize.all.map{|t| [t.name, t.id]}, params[:"#{c}"].to_s), include_blank: true %>
+        <% end %>
+
+        <%= label_tag :weldrod %>
+        <%= text_field_tag :weldrod, params[:weldrod], placeholder: 'search by weldrod' %>
+        
+        <%= label_tag :sku %>
+        <%= text_field_tag :sku, params[:sku], placeholder: 'search by sku' %>
       <%# end %>
     </div>  
     <div class='large-3 columns'>
@@ -39,9 +50,9 @@
   <tbody>
     <% @products.each do |p| %>
     <tr class="product-row">
-      <td><%= p.product_family.name if p.product_family %></td><td><%= p.sku %></td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_path(p), class: 'small blue button radius' %> <%= link_to_icon 'trash icon-white', 'Delete', product_path(p), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td><td><a class="product-details-link" href="javascript:void(0)"><i class="icon icon-info-sign"></i></a></td>
+      <td><%= p.product_family.name if p.product_family %></td><td><%= link_to p.sku, product_path(p) %></td><td><%= link_to_icon 'edit icon-white', 'Edit', edit_product_path(p), class: 'small blue button radius' %> <%= link_to_icon 'trash icon-white', 'Delete', product_path(p), method: :delete, data: {confirm: '1'}, class: 'small red button nice radius' %></td><td><a class="product-details-link" href="javascript:void(0)"><i class="icon icon-info-sign"></i></a></td>
     </tr>
-    <tr class='hide product-details'>
+    <tr class='hidef product-details'>
       <td colspan='4'>
         <ul class='large-block-grid-4 small-block-grid-1'>
           <li>Length: <%= p.length %></li>
@@ -49,6 +60,8 @@
           <li>Thickness: <%= p.thickness %></li>
           <li>Warranty: <%= p.warranty %></li>
           <li>Color: <%= p.color.name if p.color %></li>
+          <li>Weldrod: <%= p.weldrod %></li>
+          <li>Coordinating Wallbase: <%= link_to (p.wallbase_profile_id || 000), 'javascript:void(0)' %></li>
         </ul>
       </td>
     </tr>
