Added filter hiding.

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -367,3 +367,19 @@ select {
 }
 
 .clear {clear:both}
+
+.remove-filter {
+  background: red;
+  border-radius: 20px;
+  padding: 1px 4px 2px;
+  margin: 20px 48px 0px 0px;
+}
+
+ul#filter-list {
+  position: absolute;  
+  background: white;    
+  margin-top: -17px;
+  border: 1px solid #CCC;
+  z-index: 999;
+  li {list-style-type: none; padding: 4px; padding-left: 14px; padding-right: 28px;border-bottom: 1px solid #CCC}
+}
