--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -25,7 +25,7 @@
   <%= f.grouped_collection_select(:coordinating_color_id, ColorPalette.order(:name), :colors, :formal_name, :id, :name, include_blank: true) %>
 
   <%= f.label :wallbase_profile_id %>
-  <%= f.collection_select(:wallbase_profile_id, ProductCategory.find(20).products.order(:sku), :id, :sku, include_blank: true) %>
+  <%= f.collection_select(:wallbase_profile_id, ProductCategory.find_by_name("Finish Borders/Wall Base").products.order(:sku), :id, :sku, include_blank: true) %>
 
   <%= f.label :weldrod %>
   <%= f.text_field :weldrod %>
