--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -53,7 +53,7 @@
     <div class='large-3 columns'>
       <%= label_tag :show_per_page %>
       <%= select_tag :show_per_page, options_for_select([ [10], [20], [50] ], @show_per_page) %>
-      <a id="add-filter-list" href="javascript:void(0)" class='green button radius small full-width'>Add a filter</a>
+      <a id="add-filter-list" href="javascript:void(0)" class='white button radius small full-width'>Add a filter</a>
       <ul id="filter-list" class='hide full-width'>
         <li class='<%= show_filter('product_thickness_id') %>'><a data-field='filter_product_thickness_id' class='add-filter'>Thickness</a></li>
         <li class='<%= show_filter('product_width_id') %>'><a data-field='filter_product_width_id' class='add-filter'>Width</a></li>
